<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueSender</string>
    <string name="action_settings">Settings</string>

    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    
    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>
    
    <string name="text_view_paired">Paired Devices</string>
    <string name="text_show_devices">Show Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_send_data">Send data</string>
    
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    
    <string name="text_pair">Pair</string>



    <string name="hello">Hello World, RemoteBluetooth!</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="timer">00:00:00</string>
    <string name="timerMs">.0</string>
    <string name="text_reset_watch">Reset</string>
    
</resources>