<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:id="@+id/layout_main"
    android:weightSum="1">

    
    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_show_devices" />

    <Button
        android:id="@+id/btn_send_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_send_data" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/timerBackground">
        <TextView
            style="@style/timerText"
            android:text="@string/timer"
            android:id="@+id/timer">
        </TextView>
        <TextView
            style="@style/timerText"
            android:text="@string/timerMs"
            android:id="@+id/timerMs"
            android:textSize="30sp"
            android:paddingTop="30sp">
        </TextView>
    </LinearLayout>
    <Button
        android:id="@+id/btn_reset_watch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_reset_watch" />

</LinearLayout>